# curso-django

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  docker-compose.yaml  procfile  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: curso-django CI.yml
aperitivos/: admin.py  models.py  tests.py  urls.py  views.py
aperitivos/migrations/: 0001_initial.py  0002_video_creation.py
aperitivos/templates/aperitivos/: indice.html  video.html
base/: admin.py  models.py  urls.py  views.py
base/static/css/: style.css
base/templates/base/: home.html
base/tests/: test_home.py
contrib/: .env_sample  env-sample
pypro/: settings.py  urls.py
pypro/base/: views.py
pypro/base/migrations/: 0001_initial.py
pypro/base/tests/: models.py
templates/: base.html
templates/global/: base.html  footer.html
tests/aperitivos/: test_indice.py  test_video.py  tests.py
tests/base/: test_home.py
