[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = "Projeto desenvolvido no Curso Django da Python Pro"
authors = ["Felipe Antonio <felipe.antonio.online@proton.me>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
gunicorn = "^21.2.0"
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
django-s3-folder-storage = "^0.5"
django-debug-toolbar = "^4.2.0"
sentry-sdk = "^1.30.0"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.1"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.11.1"
Sphinx = "^7.2.5"
ggshield = "^1.18.1"
pre-commit = "^3.4.0"
isort = "^5.12.0"
djlint = "^1.32.1"
model-bakery = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "120"

[tool.djlint]
ignore="H021,H031"

[tool.pytest.ini_options]
minversion = "6.0"
DJANGO_SETTINGS_MODULE = "pypro.settings"
pythonpath = "tests"
python_files = "test_*.py tests.py"
addopts = "-ra -q --doctest-modules --no-migrations"